react custom hooks user cases in fetching data , filtering arrays, and pagination

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,10 @@
   height: 40vmin;
   pointer-events: none;
 }
+.list-group {
+  display: flex;
+  color: red;
+}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
